류재범 작업12

--- a/redThon/templates/cardStudy.html
+++ b/redThon/templates/cardStudy.html
@@ -124,7 +124,7 @@
 
     .card_mini {
         width: 18%; 
-        height: 35%; 
+        height: 250px; 
         position: relative;
         transition: .4s;
         transform-style: preserve-3d;
